--- a/html/resources.html
+++ b/html/resources.html
@@ -83,7 +83,7 @@
         <div id="maincontent">
             <div id="resources">
                 <div id="local" class="shadow">
-                    <h2>本站资料：</h2>
+                    <h1>本站资料</h1>
 
                     <ol>
                         <li><a href="Unix_philosophy.html">Unix哲学</a></li>
@@ -134,7 +134,7 @@
                 </div><!-- end of local div -->
 
                 <div id="web">
-                    <h2>网络资料：</h2>
+                    <h1>网络资料</h1>
 
                     <ol class="cjk">
                         <li><a href="http://chl.be/mascots/">开源吉祥物汇总</a></li>
