resources.html: add spaces between cn/en character

--- a/html/resources.html
+++ b/html/resources.html
@@ -86,31 +86,31 @@
                     <h1>本站资料</h1>
 
                     <ol>
-                        <li><a href="Unix_philosophy.html">Unix哲学</a></li>
+                        <li><a href="Unix_philosophy.html">Unix 哲学</a></li>
 
                         <li><a href=
                         "../txt/humourous_Linux_UNIX_commands.txt">幽默命令</a></li>
 
                         <li><a href="linux.html">Linux</a></li>
 
-                        <li><a href="emacs.html">EMACS</a></li>
+                        <li><a href="emacs.html">Emacs</a></li>
 
-                        <li><a href="vim.html">VIM</a></li>
+                        <li><a href="vim.html">Vim</a></li>
 
-                        <li><a href="fvwm.html">fvwm</a></li>
+                        <li><a href="fvwm.html">Fvwm</a></li>
 
                         <li><a href="tex.html"><span class=
                         "latex">T<sub>e</sub>X</span></a></li>
 
-                        <li><a href="cprogramming.html">C语言</a></li>
+                        <li><a href="cprogramming.html">C 语言</a></li>
 
-                        <li><a href="python.html">Python语言</a></li>
+                        <li><a href="python.html">Python 语言</a></li>
 
                         <li><a href="unicode.html">UNICODE</a></li>
 
                         <li><a href="matlab.html">Matlab</a></li>
 
-                        <li><a href="git.html">git</a></li>
+                        <li><a href="git.html">Git</a></li>
 
                         <li><a href="spice.html">SPICE</a></li>
 
@@ -121,7 +121,7 @@
                         <li><a href="math-test.xhtml">MathML</a></li>
 
                         <li><a href=
-                        "../txt/Ati_and_Nvidia_graphics_naming.txt">ATI与Nvidia显卡命名规则</a></li>
+                        "../txt/Ati_and_Nvidia_graphics_naming.txt">ATI 与 Nvidia 显卡命名规则</a></li>
 
                         <li><a href="gsm-gprs.html">GSM/GPRS 调研</a></li>
 
@@ -141,17 +141,17 @@
 
                         <li><a href=
                         "http://www.w3school.com.cn/tags/html_ref_colornames.asp">
-                        HTML颜色名</a></li>
+                        HTML 颜色名</a></li>
 
                         <li><a href=
-                        "http://www.w3schools.com/css/css_colornames.asp">CSS颜色名</a></li>
+                        "http://www.w3schools.com/css/css_colornames.asp">CSS 颜色名</a></li>
 
                         <li><a href=
                         "http://www.yesky.com/imagesnew/software/jscript/back16.htm">
-                        RGB颜色转换</a></li>
+                        RGB 颜色转换</a></li>
 
                         <li><a href=
-                        "http://jsxzjh.bokee.com/3744988.html">常用RGB颜色表--Hello
+                        "http://jsxzjh.bokee.com/3744988.html">常用 RGB 颜色表--Hello
                         world!</a></li>
 
                         <li><a href=
@@ -166,15 +166,15 @@
                         "http://baike.baidu.com/view/644772.htm">十六进制颜色码</a></li>
 
                         <li><a href=
-                        "http://blog.wuxinan.net/archives/312">图片格式GIF、JPEG 和
+                        "http://blog.wuxinan.net/archives/312">图片格式 GIF、JPEG 和
                         PNG 的比较</a></li>
 
                         <li><a href=
-                        "http://www.jb51.net/article/5616.htm">漂亮的Slider效果类终于封装成功_javascript技巧_脚本之家</a></li>
+                        "http://www.jb51.net/article/5616.htm">漂亮的 Slider 效果类终于封装成功_javascript 技巧_脚本之家</a></li>
 
                         <li><a href=
                         "http://www.jb51.net/article/20779.htm">PHP CKEditor
-                        上传图片实现代码_php技巧_脚本之家</a></li>
+                        上传图片实现代码_php 技巧_脚本之家</a></li>
 
                         <li><a href=
                         "http://articles.sitepoint.com/article/advanced-email-php/5">
