update bottom div

--- a/html/resources.html
+++ b/html/resources.html
@@ -189,8 +189,8 @@
     <div id="bottom">
         <div class="tiny">
             <p><a href="http://validator.w3.org/">Valid XHTML 1.0 Strict</a>
-            <span class="fun">推荐使用良好支持标准的浏览器</span><a href=
-            "http://www.mozillaonline.com/">获得Firefox</a></p>
+            推荐使用良好支持标准的浏览器例如<a href=
+            "http://www.mozillaonline.com/">Firefox</a></p>
 
             <p>CC-BY-SA许可</p>
         </div>
