--- a/html/surfing.html
+++ b/html/surfing.html
@@ -137,12 +137,11 @@
 
     <div id="bottom">
         <div class="tiny">
-            <p><a href="http://bluefish.openoffice.nl/">Made with formerly
-            Bluefish HTML editor and now VIM.</a></p>
+            <p>Made with VIM.</p>
 
             <p><a href="http://validator.w3.org/">Valid XHTML 1.0 Strict</a>
-            <span class="fun">推荐使用良好支持标准的浏览器</span><a href=
-            "http://www.mozillaonline.com/">获得Firefox</a></p>
+            推荐使用良好支持标准的浏览器例如<a href=
+            "http://www.mozillaonline.com/">Firefox</a></p>
         </div>
     </div>
 </body>
