--- a/html/resources.html
+++ b/html/resources.html
@@ -89,7 +89,7 @@
                         <li><a href="Unix_philosophy.html">Unix 哲学</a></li>
 
                         <li><a href=
-                        "../txt/humourous_Linux_UNIX_commands.txt">幽默命令</a></li>
+                        "humourous_Linux_UNIX_commands.html">幽默命令</a></li>
 
                         <li><a href="linux.html">Linux</a></li>
 
