humourous_Linux_UNIX_commands: add original link

--- a/html/humourous_Linux_UNIX_commands.html
+++ b/html/humourous_Linux_UNIX_commands.html
@@ -74,6 +74,9 @@ cal 9 1752是有历史原因的，以下内容摘自wikipedia
 <p>shred：覆盖文件让它不能再读</p>
 <p>aptitude moo/apt-get moo -vvvvv：debian搞笑的</p>
 
+<p>注：原帖<a href=
+    "http://blog.chinaunix.net/space.php?uid=20424713&do=blog&id=1948803">
+    在此</a>。这里做了修订。</p>
         </div><!-- end of maincontent -->
     </div><!-- end of maincontainer -->
 
