humourous_Linux_UNIX_commands: fixes

--- a/html/humourous_Linux_UNIX_commands.html
+++ b/html/humourous_Linux_UNIX_commands.html
@@ -52,13 +52,13 @@
 
         <div id="maincontent">
 <p>yes：输出一串y，有时可以用来对付很多y/n选择的应用</p>
-<p>banner：打印字符标题，就是用字符拼出大字来【这个没有弄出来】</p>
+<p>banner：打印字符标题，就是用字符拼出大字来【安装 banner】</p>
 <p>ddate：把日历转成什么其他历</p>
-<p>fortune：输出一句话，内容有很多种，据说有唐诗宋词【可能需要安装】</p>
-<p>cal 9 1752：打印日历，不过那一个月的有问题，哈，还有个ccal有农历的不知道怎么样了</p>
+<p>fortune：输出一句话，内容有很多种，据说有唐诗宋词【需要安装 fortune-zh】</p>
+<p>cal 9 1752：打印日历，不过那一个月的有问题，哈，还有个ccal有农历</p>
 
 <blockquote>
-cal 9 1752是有历史原因的，以下内容摘自wikipedia
+cal 9 1752是有历史原因的，以下内容摘自 Wikipedia：
 格里历1582年10月15日，合儒略历1582年10月5日，只有意大利、波兰、西
 班牙、葡萄牙开始用格里历，日期跳过10日。由于新历法是教皇颁布的，
 新教国家予以抵制。直到18世纪，大英帝国，包括英格兰、苏格兰、以及
