Ati_and_Nvidia_graphics_naming: txt to html

--- a/html/resources.html
+++ b/html/resources.html
@@ -121,7 +121,7 @@
                         <li><a href="math-test.xhtml">MathML</a></li>
 
                         <li><a href=
-                        "../txt/Ati_and_Nvidia_graphics_naming.txt">ATI 与 Nvidia 显卡命名规则</a></li>
+                        "Ati_and_Nvidia_graphics_naming.html">ATI 与 Nvidia 显卡命名规则</a></li>
 
                         <li><a href="gsm-gprs.html">GSM/GPRS 调研</a></li>
 
