about & music: h2 to h1

--- a/html/music.html
+++ b/html/music.html
@@ -56,6 +56,7 @@
 
         <div id="maincontent">
             <div id="oggintro">
+                <h1>介绍</h1>
                 <p>鉴于ogg在中国还不为许多人了解，这里提供一些资料（主要是音乐文件）做一些推广。</p>
 
                 <p>这里的音乐有的是我自己使用oggconvert转换的，有的是从网上下的。它们都可以被自由下载复制。</p>
@@ -74,7 +75,7 @@
                 <p>更多内容，可以参看<a href=
                 "http://baike.baidu.com/view/99249.htm">百度百科</a>。</p>
 
-                <h2>播放器软件</h2>
+                <h1>播放器软件</h1>
 
                 <p>
                 Windows下Winamp、Sonique、FreeAMP等（网上介绍）都可以播放ogg格式的文件。我比较推荐Mplayer，这是一款全能、开源、<abbr title="这是个中国特色的词语"><span class="fun">“绿色”</span></abbr>的音视频播放器。最初是Linux下的，现在已经有<abbr title="Linux, Windows, Mac OS X等">各平台</abbr>下的版本。</p>
@@ -85,14 +86,14 @@
             </div>
 
             <div id="songs" class="shadow">
-                <h1>songs</h1>
+                <h1>示例歌曲</h1>
 
                 <p>Westlife: <a href=
                 "../music/How_Does_If_Feel.ogg">How_Does_It_Feel</a></p>
             </div>
 
             <div id="music" class="shadow">
-                <h1>music</h1>
+                <h1>示例音乐</h1>
 
                 <p>加勒比海盗里的<a href=
                 "../music/he's_a_pirate.ogg">he's_a_pirate</a></p>
