fixed conforming to tidy

--- a/html/Ati_and_Nvidia_graphics_naming.html
+++ b/html/Ati_and_Nvidia_graphics_naming.html
@@ -50,38 +50,47 @@
         <!--</div>[> end of sidebar <]-->
 
         <div id="maincontent">
-<h1>AMD(ATI)</h1>
-<p>
-过去采用的是后缀，从高端到低端：XTX &gt; XT &gt; XL/GTO &gt; Pro/GT &gt; SE 。
-采用不同核心的显卡，GT的级别可以高于Pro的，如X1650GT和X1650Pro。
-SE：Special Edition特殊版，主要用于中低端系列显卡的后缀。
-</p>
+            <h1>AMD(ATI)</h1>
 
-<p>
-Radeon HD 3000系列开始，采用了新的命名规则。
-以Radeon HD 3870为例，其中3代表了显卡代数、8代表了系列，而70代表了显卡的系列内型号，数字越大代表的级别就越高。
-</p>
+            <p>过去采用的是后缀，从高端到低端：XTX &gt; XT &gt; XL/GTO &gt; Pro/GT &gt; SE 。
+            采用不同核心的显卡，GT的级别可以高于Pro的，如X1650GT和X1650Pro。 SE：Special
+            Edition特殊版，主要用于中低端系列显卡的后缀。</p>
 
-<p>
-附：ATI Mobility Radeon HD 3430是3000系列中的入门级型号，比3410略高。这款显卡基于55nm制程工艺设计，核心代号为M82-SE，拥有40个流处理单元，其主要竞争对手为NVIDIA的9200M和9300M，不太适合运行大型的3D游戏。
-</p>
+            <p>Radeon HD 3000系列开始，采用了新的命名规则。 以Radeon HD
+            3870为例，其中3代表了显卡代数、8代表了系列，而70代表了显卡的系列内型号，数字越大代表的级别就越高。</p>
 
-<h1>Nvidia</h1>
-<table>
-<tr><td>
-旗舰级</td><td>GeForce GTX (260~290)
-</td></tr>
-<tr><td>
-性能级</td><td>GeForce GT (230~250)
-</td></tr>
-<tr><td>
-主流级</td><td>GeForce GS (210~220)
-</td></tr>
-<tr><td>
-入门级</td><td>GeForce G (200~209)
-</td></tr>
-</table>
-<p>另外，现在GTX 200系列和GeForce 9000系列共存，所以比较混乱。</p>
+            <p>附：ATI Mobility Radeon HD
+            3430是3000系列中的入门级型号，比3410略高。这款显卡基于55nm制程工艺设计，核心代号为M82-SE，拥有40个流处理单元，其主要竞争对手为NVIDIA的9200M和9300M，不太适合运行大型的3D游戏。</p>
+
+            <h1>Nvidia</h1>
+
+            <table summary="Nvidia 显卡命名">
+                <tr>
+                    <td>旗舰级</td>
+
+                    <td>GeForce GTX (260~290)</td>
+                </tr>
+
+                <tr>
+                    <td>性能级</td>
+
+                    <td>GeForce GT (230~250)</td>
+                </tr>
+
+                <tr>
+                    <td>主流级</td>
+
+                    <td>GeForce GS (210~220)</td>
+                </tr>
+
+                <tr>
+                    <td>入门级</td>
+
+                    <td>GeForce G (200~209)</td>
+                </tr>
+            </table>
+
+            <p>另外，现在GTX 200系列和GeForce 9000系列共存，所以比较混乱。</p>
         </div><!-- end of maincontent -->
     </div><!-- end of maincontainer -->
 
@@ -90,8 +99,8 @@ Radeon HD 3000系列开始，采用了新的命名规则。
             <p>Made with VIM.</p>
 
             <p><a href="http://validator.w3.org/">Valid XHTML 1.0 Strict</a>
-            推荐使用良好支持标准的浏览器例如
-            <a href="http://www.mozillaonline.com/">Firefox</a></p>
+            推荐使用良好支持标准的浏览器例如 <a href=
+            "http://www.mozillaonline.com/">Firefox</a></p>
 
             <p><a rel="license" href=
             "http://creativecommons.org/licenses/by-sa/2.5/cn/"><img alt=
@@ -104,4 +113,3 @@ Radeon HD 3000系列开始，采用了新的命名规则。
     </div><!-- end of bottom div -->
 </body>
 </html>
-
