--- a/html/resources.html
+++ b/html/resources.html
@@ -120,8 +120,8 @@
 
                         <li><a href="math-test.xhtml">MathML</a></li>
 
-                        <li><a href=
-                        "Ati_and_Nvidia_graphics_naming.html">ATI 与 Nvidia 显卡命名规则</a></li>
+                        <li><a href="Ati_and_Nvidia_graphics_naming.html">ATI
+                        与 Nvidia 显卡命名规则</a></li>
 
                         <li><a href="gsm-gprs.html">GSM/GPRS 调研</a></li>
 
@@ -144,15 +144,15 @@
                         HTML 颜色名</a></li>
 
                         <li><a href=
-                        "http://www.w3schools.com/css/css_colornames.asp">CSS 颜色名</a></li>
+                        "http://www.w3schools.com/css/css_colornames.asp">CSS
+                        颜色名</a></li>
 
                         <li><a href=
                         "http://www.yesky.com/imagesnew/software/jscript/back16.htm">
                         RGB 颜色转换</a></li>
 
-                        <li><a href=
-                        "http://jsxzjh.bokee.com/3744988.html">常用 RGB 颜色表--Hello
-                        world!</a></li>
+                        <li><a href="http://jsxzjh.bokee.com/3744988.html">常用
+                        RGB 颜色表--Hello world!</a></li>
 
                         <li><a href=
                         "http://jomor.org/2009/01/24/some-wonderful-color-code">
@@ -166,11 +166,12 @@
                         "http://baike.baidu.com/view/644772.htm">十六进制颜色码</a></li>
 
                         <li><a href=
-                        "http://blog.wuxinan.net/archives/312">图片格式 GIF、JPEG 和
-                        PNG 的比较</a></li>
+                        "http://blog.wuxinan.net/archives/312">图片格式 GIF、JPEG
+                        和 PNG 的比较</a></li>
 
                         <li><a href=
-                        "http://www.jb51.net/article/5616.htm">漂亮的 Slider 效果类终于封装成功_javascript 技巧_脚本之家</a></li>
+                        "http://www.jb51.net/article/5616.htm">漂亮的 Slider
+                        效果类终于封装成功_javascript 技巧_脚本之家</a></li>
 
                         <li><a href=
                         "http://www.jb51.net/article/20779.htm">PHP CKEditor
