--- a/html/humourous_Linux_UNIX_commands.html
+++ b/html/humourous_Linux_UNIX_commands.html
@@ -7,7 +7,6 @@
     "HTML Tidy for Linux (vers 25 March 2009), see www.w3.org" />
 
     <title>幽默 Linux/Unix 命令</title>
-
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="../css/style1.css" rel="stylesheet" type="text/css" />
     <link href="../img/favicon.ico" rel="SHORTCUT ICON" />
@@ -51,32 +50,42 @@
         <!--</div>[> end of sidebar <]-->
 
         <div id="maincontent">
-<p>yes：输出一串y，有时可以用来对付很多y/n选择的应用</p>
-<p>banner：打印字符标题，就是用字符拼出大字来【安装 banner】</p>
-<p>ddate：把日历转成什么其他历</p>
-<p>fortune：输出一句话，内容有很多种，据说有唐诗宋词【需要安装 fortune-zh】</p>
-<p>cal 9 1752：打印日历，不过那一个月的有问题，哈，还有个ccal有农历</p>
+            <p>yes：输出一串y，有时可以用来对付很多y/n选择的应用</p>
 
-<blockquote>
-cal 9 1752是有历史原因的，以下内容摘自 Wikipedia：
-格里历1582年10月15日，合儒略历1582年10月5日，只有意大利、波兰、西
-班牙、葡萄牙开始用格里历，日期跳过10日。由于新历法是教皇颁布的，
-新教国家予以抵制。直到18世纪，大英帝国，包括英格兰、苏格兰、以及
-现在美国的一部份才采纳格里历，也就是儒略历1752年9月2日星期三的次
-日是格里历1752年9月14日星期四，日期跳过11日。
-</blockquote>
+            <p>banner：打印字符标题，就是用字符拼出大字来【安装 banner】</p>
 
-<p>tac：concatenate and print files in reverse，把文件的行反过来打印</p>
-<p>ptx - produce a permuted index of file contents，生成索引？不知道</p>
-<p>xev：打印即时的X事件【需要X11】</p>
-<p>xeyes：出眼睛那个，进X第一都要玩玩吧【需要X11】</p>
-<p>factor：分解因数</p>
-<p>shred：覆盖文件让它不能再读</p>
-<p>aptitude moo/apt-get moo -vvvvv：debian搞笑的</p>
+            <p>ddate：把日历转成什么其他历</p>
 
-<p>注：原帖<a href=
-    "http://blog.chinaunix.net/space.php?uid=20424713&do=blog&id=1948803">
-    在此</a>。这里做了修订。</p>
+            <p>fortune：输出一句话，内容有很多种，据说有唐诗宋词【需要安装 fortune-zh】</p>
+
+            <p>cal 9 1752：打印日历，不过那一个月的有问题，哈，还有个ccal有农历</p>
+
+            <blockquote>
+                cal 9 1752是有历史原因的，以下内容摘自 Wikipedia：
+                格里历1582年10月15日，合儒略历1582年10月5日，只有意大利、波兰、西
+                班牙、葡萄牙开始用格里历，日期跳过10日。由于新历法是教皇颁布的，
+                新教国家予以抵制。直到18世纪，大英帝国，包括英格兰、苏格兰、以及
+                现在美国的一部份才采纳格里历，也就是儒略历1752年9月2日星期三的次
+                日是格里历1752年9月14日星期四，日期跳过11日。
+            </blockquote>
+
+            <p>tac：concatenate and print files in reverse，把文件的行反过来打印</p>
+
+            <p>ptx - produce a permuted index of file contents，生成索引？不知道</p>
+
+            <p>xev：打印即时的X事件【需要X11】</p>
+
+            <p>xeyes：出眼睛那个，进X第一都要玩玩吧【需要X11】</p>
+
+            <p>factor：分解因数</p>
+
+            <p>shred：覆盖文件让它不能再读</p>
+
+            <p>aptitude moo/apt-get moo -vvvvv：debian搞笑的</p>
+
+            <p>注：原帖 <a href=
+            "http://blog.chinaunix.net/space.php?uid=20424713&amp;do=blog&amp;id=1948803">
+            在此</a>。这里做了修订。</p>
         </div><!-- end of maincontent -->
     </div><!-- end of maincontainer -->
 
@@ -85,8 +94,8 @@ cal 9 1752是有历史原因的，以下内容摘自 Wikipedia：
             <p>Made with VIM.</p>
 
             <p><a href="http://validator.w3.org/">Valid XHTML 1.0 Strict</a>
-            推荐使用良好支持标准的浏览器例如
-            <a href="http://www.mozillaonline.com/">Firefox</a></p>
+            推荐使用良好支持标准的浏览器例如 <a href=
+            "http://www.mozillaonline.com/">Firefox</a></p>
 
             <p><a rel="license" href=
             "http://creativecommons.org/licenses/by-sa/2.5/cn/"><img alt=
@@ -99,4 +108,3 @@ cal 9 1752是有历史原因的，以下内容摘自 Wikipedia：
     </div><!-- end of bottom div -->
 </body>
 </html>
-
