--- a/html/images.html
+++ b/html/images.html
@@ -10,13 +10,17 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="../img/favicon.ico" rel="SHORTCUT ICON" />
     <link href="../css/style1.css" rel="stylesheet" type="text/css" />
+    <link href="../css/prettyPhoto.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="../js/eventsManager.js">
 </script>
-    <script type="text/javascript" src="../js/slide.js">
-</script>
     <script type="text/javascript" src="../js/lunar1.js">
-</script><!--<script type="text/javascript" src="../js/weather.js">-->
-    <!--</script>-->
+</script>
+    <script type="text/javascript" src="../js/jquery.js">
+</script>
+    <script type="text/javascript" src="../js/jquery.prettyPhoto.js">
+</script>
+    <script type="text/javascript" src="../js/images.js">
+</script>
 </head>
 
 <body>
@@ -56,24 +60,16 @@
         </div><!-- end of sidebar -->
 
         <div id="maincontent">
-            <div id="image">
-                <div id="image_box_container">
-                    <div id="image_box" class="img_center">
-                        <img src="../img/how_many.gif" id="slide" alt=
-                        "slide show" />
-
-                        <div id="caption">
-                            how_many
-                        </div>
-                    </div>
-                </div>
-
-                <div class="shadow">
-                    <a href="#" id="prelink" name="prelink">&lt;&lt;后退</a>
-                    <a href="#" id="nextlink" name="nextlink">前进&gt;&gt;</a>
-                    &nbsp;&nbsp; <input type="button" id="auto" value=
-                    "幻灯片效果" /> <input type="button" id="noauto" value="停止" />
-                </div>
+            <div id="image_box">
+                <ul>
+                    <li><a rel="prettyPhoto[gallery]" href="../img/how_many.gif" title="How many people are threre in the picture?"><img src="../img/how_many.gif" width="128" height="128" alt="How many people?"/></a></li>
+                    <li><a rel="prettyPhoto[gallery]" href="../img/libra.jpg"><img src="../img/libra.jpg" width="128" height="128" alt="Libra Calendar"/></a></li>
+                    <li><a rel="prettyPhoto[gallery]" href="../img/pic_header.jpeg"><img src="../img/pic_header.jpeg" width="128" height="128" alt="Header Picture"/></a></li>
+                    <li><a rel="prettyPhoto[gallery]" href="../img/pic_bottom.jpeg"><img src="../img/pic_bottom.jpeg" width="128" height="128" alt="Old Bottom Picture"/></a></li>
+                    <li><a rel="prettyPhoto[gallery]" href="../img/rube-golbergesque_001.gif"><img src="../img/rube-golbergesque_001.gif" width="128" height="128" alt="rube-golbergesque_001"/></a></li>
+                    <li><a rel="prettyPhoto[gallery]" href="../img/sunset.jpg"><img src="../img/sunset.jpg" width="128" height="128" alt="Sunset"/></a></li>
+                    <li><a rel="prettyPhoto[gallery]" href="../img/thu_old_gate.jpg"><img src="../img/thu_old_gate.jpg" width="128" height="128" alt="Tsinghua University Old School Gate"/></a></li>
+                </ul>
             </div>
         </div><!-- end of maincontent -->
     </div><!-- end of maincontainer -->
