surfing update, html tidied

--- a/html/images.html
+++ b/html/images.html
@@ -62,13 +62,39 @@
         <div id="maincontent">
             <div id="image_box">
                 <ul>
-                    <li><a rel="prettyPhoto[gallery]" href="../img/how_many.gif" title="How many people are threre in the picture?"><img src="../img/how_many.gif" width="128" height="128" alt="How many people?"/></a></li>
-                    <li><a rel="prettyPhoto[gallery]" href="../img/libra.jpg"><img src="../img/libra.jpg" width="128" height="128" alt="Libra Calendar"/></a></li>
-                    <li><a rel="prettyPhoto[gallery]" href="../img/pic_header.jpeg"><img src="../img/pic_header.jpeg" width="128" height="128" alt="Header Picture"/></a></li>
-                    <li><a rel="prettyPhoto[gallery]" href="../img/pic_bottom.jpeg"><img src="../img/pic_bottom.jpeg" width="128" height="128" alt="Old Bottom Picture"/></a></li>
-                    <li><a rel="prettyPhoto[gallery]" href="../img/rube-golbergesque_001.gif"><img src="../img/rube-golbergesque_001.gif" width="128" height="128" alt="rube-golbergesque_001"/></a></li>
-                    <li><a rel="prettyPhoto[gallery]" href="../img/sunset.jpg"><img src="../img/sunset.jpg" width="128" height="128" alt="Sunset"/></a></li>
-                    <li><a rel="prettyPhoto[gallery]" href="../img/thu_old_gate.jpg"><img src="../img/thu_old_gate.jpg" width="128" height="128" alt="Tsinghua University Old School Gate"/></a></li>
+                    <li><a rel="prettyPhoto[gallery]" href=
+                    "../img/how_many.gif" title=
+                    "How many people are threre in the picture?"><img src=
+                    "../img/how_many.gif" width="128" height="128" alt=
+                    "How many people?" /></a></li>
+
+                    <li><a rel="prettyPhoto[gallery]" href=
+                    "../img/libra.jpg"><img src="../img/libra.jpg" width=
+                    "128" height="128" alt="Libra Calendar" /></a></li>
+
+                    <li><a rel="prettyPhoto[gallery]" href=
+                    "../img/pic_header.jpeg"><img src=
+                    "../img/pic_header.jpeg" width="128" height="128" alt=
+                    "Header Picture" /></a></li>
+
+                    <li><a rel="prettyPhoto[gallery]" href=
+                    "../img/pic_bottom.jpeg"><img src=
+                    "../img/pic_bottom.jpeg" width="128" height="128" alt=
+                    "Old Bottom Picture" /></a></li>
+
+                    <li><a rel="prettyPhoto[gallery]" href=
+                    "../img/rube-golbergesque_001.gif"><img src=
+                    "../img/rube-golbergesque_001.gif" width="128" height=
+                    "128" alt="rube-golbergesque_001" /></a></li>
+
+                    <li><a rel="prettyPhoto[gallery]" href=
+                    "../img/sunset.jpg"><img src="../img/sunset.jpg" width=
+                    "128" height="128" alt="Sunset" /></a></li>
+
+                    <li><a rel="prettyPhoto[gallery]" href=
+                    "../img/thu_old_gate.jpg"><img src=
+                    "../img/thu_old_gate.jpg" width="128" height="128" alt=
+                    "Tsinghua University Old School Gate" /></a></li>
                 </ul>
             </div>
         </div><!-- end of maincontent -->
