--- a/html/surfing.html
+++ b/html/surfing.html
@@ -93,12 +93,6 @@
                 </div>
 
                 <div class="siteclass">
-                    <span class="siteclassname">搜索</span> <a href=
-                    "https://www.google.com">Google</a> <a href=
-                    "http://www.baidu.com/">Baidu</a>
-                </div>
-
-                <div class="siteclass">
                     <span class="siteclassname">论坛</span> <a href=
                     "http://www.linuxdiyf.com/bbs">红联BBS</a> <a href=
                     "http://www.newsmth.net/">水木社区</a> <a href=
@@ -123,13 +117,8 @@
 
                 <div class="siteclass">
                     <span class="siteclassname">友链</span> <a href=
-                    "http://learn.tsinghua.edu.cn:8080/2008011108/index.htm">王鹤达的个人主页</a>
-                </div>
-
-                <div class="siteclass">
-                    <span class="siteclassname">认证</span> <a href=
-                    "https://auth-1.ccert.edu.cn:8443/eportal/index.jsp?s=e070690f5e1345db642039e328afb748&amp;mac=f7d97f9e764d075e60a8e653dacc388f&amp;vid=e3cbc67d63369647&amp;port=946dc6803fa4b835&amp;url=883dfa24377e48c91a6998b0929594e035ae3f8b51df504b2cd1a1a5b7e9cc3b680b8a92680054d9">
-                    IPv6 认证</a>
+                    "http://wp-awesome.rhcloud.com/">博客</a> <a href=
+                    "http://1.wangheda.sinaapp.com/">王鹤达</a>
                 </div>
             </div>
         </div><!-- end of maincontent -->
