html/images.html: fixed one typo

--- a/html/images.html
+++ b/html/images.html
@@ -64,7 +64,7 @@
                 <ul>
                     <li><a rel="prettyPhoto[gallery]" href=
                     "../img/how_many.gif" title=
-                    "How many people are threre in the picture?"><img src=
+                    "How many people are there in the picture?"><img src=
                     "../img/how_many.gif" width="128" height="128" alt=
                     "How many people?" /></a></li>
 
