--- a/html/about.html
+++ b/html/about.html
@@ -65,7 +65,23 @@
             </div>
 
             <div id="releasenotes">
-                <p>当前版本：v1.14 (2011/11/24)</p>
+                <p>当前版本：v2.0</p>
+
+                <p class="version">Version 2.0(2012/01/21)</p>
+
+                <ol>
+                    <li>HTML 结构独立出来导航菜单。</li>
+
+                    <li>JavaScript 引入 prettyPhoto 库，处理图片浏览。</li>
+
+                    <li>CSS 调整，更兼容 Webkit 核浏览器。</li>
+
+                    <li>txt 文件转换成 html</li>
+
+                    <li>许许多多内容改进。</li>
+
+                    <li>详见 git log...</li>
+                </ol>
 
                 <p class="version">Version 1.5(2010/09/19)</p>
 
