--- a/html/tex.html
+++ b/html/tex.html
@@ -41,6 +41,8 @@
 
     <div id="maincontainer">
         <div id="maincontent">
+            <h1>简介</h1>
+
             <p>TeX是一个专业的文档排版工具，用于生成高质量的文档书籍。如今
             也被用于生成电子文档。TeX尤其擅长于对数学公式的排版。</p>
 
@@ -62,11 +64,19 @@
 
             <p>CTAN(Comprehensive TeX Archive
             Network)是提供最齐全的及时更新的与TeX相关的软件的一个站点，在 全球有许多镜像站点。中国大陆有<a href=
-            "ftp://ftp.ctex.org/mirrors/CTAN/">ctex的镜像</a>和<a href=
-            "ftp://mirrors.xmu.edu.cn/CTAN/">厦门大学的镜像</a>。</p>
+            "ftp://ftp.ctex.org/mirrors/CTAN/">ctex</a>、<a href=
+            "ftp://mirrors.xmu.edu.cn/CTAN/">厦门大学</a>、 <a href=
+            "http://mirrors.tuna.tsinghua.edu.cn/CTAN/">清华大学</a>等镜像。</p>
 
-            <p>要在 Linux 系统下安装 TeX 工具，推荐用网络安装的方式下载安装 TeX Live 最新版（目前是 2011）。
-            这需要首先下载一个 <a href=
+            <h1>安装</h1>
+
+            <p>详细的安装步骤可以参考这里的<a href=
+            "https://github.com/alick9188/fad-texlive-talk">幻灯片</a>。</p>
+
+            <p>下面是一个简要介绍：</p>
+
+            <p>要在 Linux 系统下安装 TeX 工具，推荐用网络安装的方式下载安装 TeX Live 最新版。 这需要首先下载一个
+            <a href=
             'ftp://ftp.ctex.org/mirrors/CTAN/systems/texlive/tlnet/install-tl-unx.tar.gz'>
             安装脚本</a>， 名字为 install-tl-unx.tar.gz 。解压后在解压得到的目录下使用类似下面的命令安装：</p>
             <pre>
@@ -76,6 +86,8 @@ sudo ./install-tl --gui=perltk -repository='ftp://ftp.ctex.org/mirrors/CTAN/syst
             <p>也就是说，安装需要 root 权限（如果不选择安装到系统目录则不需要），指定使用 GUI 图形界面（需要系统上有 Perl
             的 Tk 模块），指定从 ctex.org 的镜像下载需要安装的软件（各种宏包和文档）。</p>
 
+            <h1>小窍门(Tips and Tricks)</h1>
+
             <p>用于TeX的文档字数统计工具：</p>
             <pre>
 texcount -chinese texfile
@@ -84,15 +96,11 @@ texcount -chinese texfile
             <p>TeX 中的长度单位</p>
             <pre>
 1pt=65536sp=1/72.27in
-</pre>
-            <pre>
 1in=25.4mm=2.54cm
-</pre>
-            <pre>
 1bp=1/72in
 </pre>
 
-            <p>下面列出一些在线资料</p>
+            <h1>在线资料链接</h1>
 
             <ol>
                 <li>中文相关
