getting to know the tags code,kbd,samp,var,...

--- a/html/tex.html
+++ b/html/tex.html
@@ -80,7 +80,7 @@
             'ftp://ftp.ctex.org/mirrors/CTAN/systems/texlive/tlnet/install-tl-unx.tar.gz'>
             安装脚本</a>， 名字为 install-tl-unx.tar.gz 。解压后在解压得到的目录下使用类似下面的命令安装：</p>
             <pre>
-sudo ./install-tl --gui=perltk -repository='ftp://ftp.ctex.org/mirrors/CTAN/systems/texlive/tlnet/'
+<kbd>sudo ./install-tl --gui=perltk -repository='ftp://ftp.ctex.org/mirrors/CTAN/systems/texlive/tlnet/'</kbd>
 </pre>
 
             <p>也就是说，安装需要 root 权限（如果不选择安装到系统目录则不需要），指定使用 GUI 图形界面（需要系统上有 Perl
@@ -88,10 +88,7 @@ sudo ./install-tl --gui=perltk -repository='ftp://ftp.ctex.org/mirrors/CTAN/syst
 
             <h1>小窍门(Tips and Tricks)</h1>
 
-            <p>用于TeX的文档字数统计工具：</p>
-            <pre>
-texcount -chinese texfile
-</pre>
+            <p>用于TeX的文档字数统计工具： <kbd>texcount -chinese texfile</kbd></p>
 
             <p>TeX 中的长度单位</p>
             <pre>
