gsm-gprs.html: add ref links

--- a/html/gsm-gprs.html
+++ b/html/gsm-gprs.html
@@ -292,6 +292,24 @@
                 <li>TS7 <img alt="Half Rate Traffic Channel (TCH/HS)" src=
                 "../img/logical6.jpg" /></li>
             </ul>
+
+            <h2>更多参考资料</h2>
+
+            <ul>
+                <li><a href=
+                "http://www.radio-electronics.com/info/cellulartelecomms/gsm_technical/frames-structure-super-hyper.php">
+                GSM Frame Structure :: Radio-Electronics.Com</a> A tutorial,
+                overview of the basics of GSM frame structure including the
+                multiframe, superframe and hyperframe.</li>
+
+                <li><a href=
+                "http://en.wikipedia.org/wiki/Signalling_System_No._7">Signalling
+                System No. 7 - Wikipedia, the free encyclopedia</a></li>
+
+                <li><a href=
+                "http://www.cs.ucl.ac.uk/staff/t.pagtzis/wireless/gsm/radio.html">
+                GSM: Radio interface</a></li>
+            </ul>
         </div><!-- end of maincontent -->
     </div><!-- end of maincontainer div -->
 
