add reset.css: reset all css

--- a/html/libra.html
+++ b/html/libra.html
@@ -21,6 +21,7 @@
         -->
     /*]]>*/
     </style>
+    <link href="../css/reset.css" rel="stylesheet" type="text/css" />
     <link href="style1.css" rel="stylesheet" type="text/css" />
 </head>
 
