--- a/html/music.html
+++ b/html/music.html
@@ -9,6 +9,7 @@
     <title>Play good ogg music!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="../img/favicon.ico" rel="SHORTCUT ICON" />
+    <link href="../css/reset.css" rel="stylesheet" type="text/css" />
     <link href="../css/style1.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="../js/eventsManager.js/">
 </script>
