--- a/html/ascii_smileys.html
+++ b/html/ascii_smileys.html
@@ -8,6 +8,7 @@
 
     <title>ASCII 表情符</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="../css/reset.css" rel="stylesheet" type="text/css" />
     <link href="../css/style1.css" rel="stylesheet" type="text/css" />
     <link href="../css/table.css" rel="stylesheet" type="text/css" />
     <link href="../img/favicon.ico" rel="SHORTCUT ICON" />
