--- a/html/auto_switch.html
+++ b/html/auto_switch.html
@@ -8,6 +8,7 @@
 
     <title>自动跳转</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="../css/reset.css" rel="stylesheet" type="text/css" />
     <link href="style1.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
 //<![CDATA[
