--- a/html/calcu_constellation_zodiac.html
+++ b/html/calcu_constellation_zodiac.html
@@ -8,6 +8,7 @@
 
     <title>计算星座与属相</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="../css/reset.css" rel="stylesheet" type="text/css" />
     <link href="style1.css" rel="stylesheet" type="text/css" />
 </head>
 
