--- a/html/cprogramming.html
+++ b/html/cprogramming.html
@@ -8,6 +8,7 @@
 
     <title>C语言</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="../css/reset.css" rel="stylesheet" type="text/css" />
     <link href="../css/style1.css" rel="stylesheet" type="text/css" />
     <link href="../img/favicon.ico" rel="SHORTCUT ICON" />
     <!-- <script type="text/javascript" src="js/eventsManager.js">
