--- a/html/emacs.html
+++ b/html/emacs.html
@@ -8,6 +8,7 @@
 
     <title>Emacs intro by a non-Emacs user</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="../css/reset.css" rel="stylesheet" type="text/css" />
     <link href="../css/style1.css" rel="stylesheet" type="text/css" />
 </head>
 
