--- a/html/matlab.html
+++ b/html/matlab.html
@@ -8,6 +8,7 @@
 
     <title>matlab</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="../css/reset.css" rel="stylesheet" type="text/css" />
     <link href="../css/style1.css" rel="stylesheet" type="text/css" />
     <!-- <script type="text/javascript" src="../js/"> -->
     <!--</script>-->
