--- a/html/tex.html
+++ b/html/tex.html
@@ -81,7 +81,8 @@
             'ftp://ftp.ctex.org/mirrors/CTAN/systems/texlive/tlnet/install-tl-unx.tar.gz'>
             安装脚本</a>， 名字为 install-tl-unx.tar.gz 。解压后在解压得到的目录下使用类似下面的命令安装：</p>
             <pre>
-<kbd>sudo ./install-tl --gui=perltk -repository='ftp://ftp.ctex.org/mirrors/CTAN/systems/texlive/tlnet/'</kbd>
+<kbd>sudo ./install-tl --gui=perltk -repository=\
+'ftp://ftp.ctex.org/mirrors/CTAN/systems/texlive/tlnet/'</kbd>
 </pre>
 
             <p>也就是说，安装需要 root 权限（如果不选择安装到系统目录则不需要），指定使用 GUI 图形界面（需要系统上有 Perl
