--- a/html/about.html
+++ b/html/about.html
@@ -66,7 +66,13 @@
             </div>
 
             <div id="releasenotes">
-                <p>当前版本：v2.0</p>
+                <p>当前版本：v2.1</p>
+
+                <p class="version">Version 2.0(2012/01/21)</p>
+
+                <ol>
+                    <li>针对打印介质的 CSS 样式优化。</li>
+                </ol>
 
                 <p class="version">Version 2.0(2012/01/21)</p>
 
