add attribution of the sunset image

--- a/html/images.html
+++ b/html/images.html
@@ -89,8 +89,10 @@
                     "128" alt="rube-golbergesque_001" /></a></li>
 
                     <li><a rel="prettyPhoto[gallery]" href=
-                    "../img/sunset.jpg"><img src="../img/sunset.jpg" width=
-                    "128" height="128" alt="Sunset" /></a></li>
+                    "../img/sunset.jpg" title=
+                    "By Ian Britton. Image taken from http://www.freefoto.com/preview/45-33-1/Sunset">
+                    <img src="../img/sunset.jpg" width="128" height="128"
+                    alt="Sunset" /></a></li>
 
                     <li><a rel="prettyPhoto[gallery]" href=
                     "../img/thu_old_gate.jpg"><img src=
