--- a/html/about.html
+++ b/html/about.html
@@ -66,7 +66,7 @@
             </div>
 
             <div id="releasenotes">
-                <p>当前版本：v2.1</p>
+                <p>当前版本：v2.2git</p>
 
                 <p class="version">Version 2.1(2012/02/12)</p>
 
