css: table round corner

--- a/html/wind.html
+++ b/html/wind.html
@@ -53,7 +53,7 @@
             <p align="center">风力等级表</p>
 
             <div align="center">
-                <table border="1" cellspacing="0" summary="风力等级表">
+                <table summary="风力等级表">
                     <tbody>
                         <tr>
                             <td>风级和符号</td>
