cprogramming.html: add info about utils

--- a/html/cprogramming.html
+++ b/html/cprogramming.html
@@ -56,6 +56,14 @@
 
             <p>指针是C语言的精华。</p>
 
+            <p>有一些实用工具值得一提：</p>
+            <ul>
+                <li>splint</li>
+                <li>cproto</li>
+                <li>cdecl</li>
+                <li>valgrind</li>
+            </ul>
+
             <p>查看GNU BUILD SYSTEM手册，使用<span class="cmdinline">info
             autoconf</span>。 自动化得到Makefile的流程图参考info autoconf 的Making
             configure Scripts一节。</p>
