--- a/html/resources.html
+++ b/html/resources.html
@@ -85,6 +85,7 @@
             <div id="resources">
                 <div id="local" class="shadow">
                     <h1>本站资料</h1>
+                    <p>个人维基正在迁移到一个单独的版本库，并且主要使用 MarkDown 格式来撰写，<a href="https://github.com/alick9188/mywiki/wiki">Github</a>上可以看到用 Gollum 得到的网页版本。这里应该不会继续更新。</p>
 
                     <ol>
                         <li><a href="Unix_philosophy.html">Unix 哲学</a></li>
@@ -136,6 +137,7 @@
 
                 <div id="web">
                     <h1>网络资料</h1>
+                    <p>这里的链接应该会整合到相关的个人维基页面中。</p>
 
                     <ol class="cjk">
                         <li><a href="http://chl.be/mascots/">开源吉祥物汇总</a></li>
