gnuradio.html: mark deprecated

--- a/html/gnuradio.html
+++ b/html/gnuradio.html
@@ -47,6 +47,8 @@
 
     <div id="maincontainer">
         <div id="maincontent">
+            <p>本文档最新版本见<a href="https://github.com/alick9188/mywiki/wiki/gnuradio">个人维基</a>。</p>
+
             <p>GNU Radio 是一套自由软件工具，用于软件无线电领域。</p>
 
             <p>应用程序主要使用 Python 语言编写（flow graph 流图概念）， 核心算法/功能实现采用
