surfing: try a new UI for site links

--- a/html/surfing.html
+++ b/html/surfing.html
@@ -88,38 +88,82 @@
         <div id="maincontent">
             <div id="surfing" class="surfing">
                 <div class="siteclass">
-                    <span class="siteclassname">学习</span> <a href=
-                    "http://info.tsinghua.edu.cn/index.jsp">信息门户</a> <a href=
-                    "http://mirrors.tuna.tsinghua.edu.cn/">开源镜像站</a>
+                    <div class="siteclassname">
+                        学习
+                    </div>
+
+                    <div class="siteclasslinks">
+                        <a href=
+                        "http://info.tsinghua.edu.cn/index.jsp">信息门户</a>
+                        <a href=
+                        "http://network.ee.tsinghua.edu.cn/grwiki/">GR
+                        Wiki</a>
+                    </div><!-- end of siteclasslinks div -->
                 </div>
 
                 <div class="siteclass">
-                    <span class="siteclassname">论坛</span> <a href=
-                    "http://www.linuxdiyf.com/bbs">红联BBS</a> <a href=
-                    "http://www.newsmth.net/">水木社区</a> <a href=
-                    "http://thuee.net/">FREE</a>
+                    <div class="siteclassname">
+                        社区
+                    </div>
+
+                    <div class="siteclasslinks">
+                        <a href=
+                        "http://mirrors.tuna.tsinghua.edu.cn/">开源镜像站</a>
+                        <a href=
+                        "https://fedoraproject.org/wiki/User:Alick">FP
+                        Wiki</a>
+                    </div><!-- end of siteclasslinks div -->
                 </div>
 
                 <div class="siteclass">
-                    <span class="siteclassname">空间</span> <a href=
-                    "https://www.google.com/reader/view/?hl=zh-CN&amp;tab=wy">
-                    Google Reader</a> <a href=
-                    "http://passport.renren.com/PLogin.do">上校内</a> <a href=
-                    "http://weibo.com/alickzhao">sina 微博</a>
+                    <div class="siteclassname">
+                        论坛
+                    </div>
+
+                    <div class="siteclasslinks">
+                        <a href="http://www.linuxdiyf.com/bbs">红联 BBS</a>
+                        <a href="http://www.newsmth.net/">水木社区</a>
+                    </div><!-- end of siteclasslinks div -->
                 </div>
 
                 <div class="siteclass">
-                    <span class="siteclassname">工具</span> <a href=
-                    "http://cgbt.cn/forums/viewthread.php?tid=237846">IPv6
-                    电视电台</a> <a href="huochepiao.html">火车票查询</a> <a href=
-                    "http://www.ip138.com/ips8.asp">IP 查询</a> <a href=
-                    "utils.html">更多</a>
+                    <div class="siteclassname">
+                        空间
+                    </div>
+
+                    <div class="siteclasslinks">
+                        <a href=
+                        "http://passport.renren.com/PLogin.do">人人网</a>
+                        <a href="http://weibo.com/alickzhao">新浪微博</a>
+                        <a href="https://www.google.com/reader/view/?hl=zh-CN&amp;tab=wy">
+                        阅读器</a> <a href=
+                        "https://www.facebook.com/">Facebook</a> <a href=
+                        "https://twitter.com/">Twitter</a> <a href=
+                        "https://plus.google.com/">GPlus</a> <a href=
+                        "http://www.flickr.com/photos/alick9188/">Flickr
+                        相册</a> <a href=
+                        "https://wp-awesome.rhcloud.com/">博客</a> <a href=
+                        "https://github.com/alick9188/mywiki/wiki">个人维基</a>
+                    </div><!-- end of siteclasslinks div -->
                 </div>
 
                 <div class="siteclass">
-                    <span class="siteclassname">友链</span> <a href=
-                    "http://wp-awesome.rhcloud.com/">博客</a> <a href=
-                    "http://1.wangheda.sinaapp.com/">王鹤达</a>
+                    <div class="siteclassname">
+                        工具
+                    </div>
+
+                    <div class="siteclasslinks">
+                        <a href=
+                        "http://cgbt.cn/forums/viewthread.php?tid=237846">IPv6
+                        电视</a> <a href="http://www.ip138.com/ips8.asp">IP
+                        查询</a> <a href="http://viewdns.info/">DNS 查询</a>
+                        <a href="huochepiao.html">火车票查询</a> <a href=
+                        "calcu_constellation_zodiac.html">星座属相计算器</a>
+                        <a href="http://www.poptool.net/enet/mp3_lrc/">歌词</a>
+                        <a href=
+                        "http://xh.5156edu.com/conversion.html">汉字转拼音</a>
+                        <a href="http://xh.5156edu.com/jtof.php">简繁转换</a>
+                    </div><!-- end of siteclasslinks div -->
                 </div>
             </div>
         </div><!-- end of maincontent -->
